# poetry-maturin-mingw-msys2

./: Cargo.toml  pyproject.toml
.github/workflows/: test.yml
python/hello_world/: main.py
tests/: test_hello_world.py
