[tool.poetry]
name = "poetry-maturin-mingw-msys2"
version = "0.0.1"
description = ""
authors = ["YOSHIMURA Yuu <yyu@mental.poker>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typing_extensions = "*"
semantic_version = "*"

[tool.poetry.dev-dependencies]
poetry = ">=1.2.0"
wheel = "*"
maturin = "==1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.0,<2.0"]
build-backend = "maturin"
